# binfer

./: .gitignore  README.md  package.json  setup.sh  tsconfig.json
cuda/: CMakeLists.txt
cuda/fa3/: CMakeLists.txt  fa3_api.cu
cuda/include/: attention.h  binfer.h
cuda/kernels/: activation.cu  attention.cu  bf16_kernels.cu  gds.cu  gemm.cu  moe_cutlass.cu  moe_fused.cu  moe_kernels.cu  moe_marlin.cu  moe_optimized.cu  paged_attention.cu  rmsnorm.cu  rotary.cu
python/: hf_download.py  requirements.txt  tokenizer.py  weight_loader.py
src/: index.ts  loadtest.ts  serve.ts  serve_legacy.ts
src/backend/: interface.ts
src/backend/cuda/: bindings.ts  fa3_bindings.ts  wrapper.ts
src/engine/: batched_engine.ts  device_context.ts  engine_legacy.ts  sampler.ts  tp_context.ts
src/kv/: manager.ts  paged.ts
src/loader/: mmap_loader.ts  safetensors.ts
src/model/: config.ts  loader.ts  tokenizer.ts
src/model/architectures/: llama.ts
src/parallel/: index.ts  layers.ts  loader.ts  nccl.ts  shard_cache.ts
src/profiler/: profiler.ts  tracer.ts
src/scheduler/: request.ts  scheduler.ts
src/server/: server.ts
src/tensor/: dtype.ts  memory.ts  tensor.ts
tests/: shard_cache.test.ts
tests/integration/: cuda.test.ts  inference.test.ts
tests/paged_attention/: run_tests.sh
tests/unit/: config.test.ts  sampler.test.ts  tensor.test.ts
